[gd_scene load_steps=20 format=3 uid="uid://b0jpy3nh58hfj"]

[ext_resource type="Script" uid="uid://bvrf4muyb03ae" path="res://Game/Letter-Sound-Hunt/script/letter_sound_hunt.gd" id="1_xj1oe"]
[ext_resource type="Texture2D" uid="uid://c4h7r4c8st43m" path="res://BG/BG_P0/3.jpg" id="2_3psay"]
[ext_resource type="Theme" uid="uid://br70tphagchtl" path="res://GameUI/themes/GAME TIME.tres" id="2_encgt"]
[ext_resource type="Script" uid="uid://csrp7at13ab0t" path="res://script/menu_component.gd" id="3_3psay"]
[ext_resource type="FontFile" uid="uid://dwxderbtno7vv" path="res://Asap_Condensed,Baloo_2,Madimi_One/Madimi_One/MadimiOne-Regular.ttf" id="4_oh4oa"]
[ext_resource type="Theme" uid="uid://7wcilstcy6ie" path="res://GameUI/themes/Main_Menu.tres" id="5_tf5ll"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oh4oa"]
texture = ExtResource("2_3psay")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hlqm0"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1i0mh"]
bg_color = Color(0.784314, 0.482353, 0.243137, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_31hr6"]
bg_color = Color(0.784314, 0.482353, 0.243137, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ly3wd"]
bg_color = Color(1, 0.909804, 0.713726, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sdpiv"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yowbx"]
bg_color = Color(1, 0.909804, 0.713726, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_encgt"]
bg_color = Color(0.65098, 0.894118, 0.894118, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_3mro0"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/font_sizes/font_size = 50
Label/fonts/font = ExtResource("4_oh4oa")
Label/styles/normal = SubResource("StyleBoxFlat_encgt")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_domf7"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tu7k8"]
bg_color = Color(0.784314, 0.482353, 0.243137, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5cvai"]
bg_color = Color(0.784314, 0.482353, 0.243137, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3mro0"]
bg_color = Color(0.65098, 0.894118, 0.894118, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="LetterSoundHunt" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xj1oe")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_oh4oa")

[node name="InstructionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="FeedbackLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -606.0
offset_top = -150.0
offset_right = 606.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Item1" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/Item1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Item2" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/Item2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Item3" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/Item3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Item4" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/Item4"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="AudioNarrator" type="AudioStreamPlayer2D" parent="."]

[node name="AudioFeedback" type="AudioStreamPlayer2D" parent="."]

[node name="MenuButton" type="Button" parent="."]
clip_contents = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.784314, 0.482353, 0.243137, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxFlat_hlqm0")
theme_override_styles/hover = SubResource("StyleBoxFlat_1i0mh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_31hr6")
theme_override_styles/normal = SubResource("StyleBoxFlat_ly3wd")
text = "â˜°
"

[node name="Menu" type="Control" parent="."]
process_mode = 3
visible = false
custom_minimum_size = Vector2(600, 850)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.0
offset_top = -425.0
offset_right = 275.0
offset_bottom = 425.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_encgt")
script = ExtResource("3_3psay")

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -380.0
offset_right = 275.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Menu/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sdpiv")

[node name="Panel" type="Panel" parent="Menu/MarginContainer/Panel"]
custom_minimum_size = Vector2(800, 1000)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yowbx")

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer/Panel"]
custom_minimum_size = Vector2(650, 550)
layout_mode = 2
offset_top = 180.0
offset_right = 550.0
offset_bottom = 580.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_3mro0")
theme_override_constants/separation = 12

[node name="Resume" type="Button" parent="Menu/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(700, 150)
layout_mode = 2
theme = ExtResource("5_tf5ll")
theme_override_fonts/font = ExtResource("4_oh4oa")
theme_override_font_sizes/font_size = 125
theme_override_styles/focus = SubResource("StyleBoxFlat_domf7")
theme_override_styles/hover = SubResource("StyleBoxFlat_tu7k8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5cvai")
theme_override_styles/normal = SubResource("StyleBoxFlat_3mro0")
text = "Resume"

[node name="Sound" type="Button" parent="Menu/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(700, 150)
layout_mode = 2
theme = ExtResource("5_tf5ll")
theme_override_fonts/font = ExtResource("4_oh4oa")
theme_override_font_sizes/font_size = 125
theme_override_styles/focus = SubResource("StyleBoxFlat_domf7")
theme_override_styles/hover = SubResource("StyleBoxFlat_tu7k8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5cvai")
theme_override_styles/normal = SubResource("StyleBoxFlat_3mro0")
text = "Sound"

[node name="Music" type="Button" parent="Menu/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(700, 150)
layout_mode = 2
theme = ExtResource("5_tf5ll")
theme_override_fonts/font = ExtResource("4_oh4oa")
theme_override_font_sizes/font_size = 125
theme_override_styles/focus = SubResource("StyleBoxFlat_domf7")
theme_override_styles/hover = SubResource("StyleBoxFlat_tu7k8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5cvai")
theme_override_styles/normal = SubResource("StyleBoxFlat_3mro0")
text = "Music"

[node name="Credits" type="Button" parent="Menu/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(700, 150)
layout_mode = 2
theme = ExtResource("5_tf5ll")
theme_override_fonts/font = ExtResource("4_oh4oa")
theme_override_font_sizes/font_size = 125
theme_override_styles/focus = SubResource("StyleBoxFlat_domf7")
theme_override_styles/hover = SubResource("StyleBoxFlat_tu7k8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5cvai")
theme_override_styles/normal = SubResource("StyleBoxFlat_3mro0")
text = "Credits"

[node name="Back" type="Button" parent="Menu/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(700, 150)
layout_mode = 2
theme = ExtResource("5_tf5ll")
theme_override_fonts/font = ExtResource("4_oh4oa")
theme_override_font_sizes/font_size = 125
theme_override_styles/focus = SubResource("StyleBoxFlat_domf7")
theme_override_styles/hover = SubResource("StyleBoxFlat_tu7k8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5cvai")
theme_override_styles/normal = SubResource("StyleBoxFlat_3mro0")
text = "Back
"

[connection signal="pressed" from="HBoxContainer/Item1" to="." method="_on_item_1_pressed"]
[connection signal="pressed" from="HBoxContainer/Item2" to="." method="_on_item_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Item3" to="." method="_on_item_3_pressed"]
[connection signal="pressed" from="HBoxContainer/Item4" to="." method="_on_item_1_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/Panel/VBoxContainer/Resume" to="Menu" method="_on_resume_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/Panel/VBoxContainer/Back" to="Menu" method="_on_back_pressed"]
